--- a/ERP com relatorio.csproj
+++ b/ERP com relatorio.csproj
@@ -178,6 +178,12 @@
     <Compile Include="Agendamentos.Designer.cs">
       <DependentUpon>Agendamentos.cs</DependentUpon>
     </Compile>
+    <Compile Include="CadastraAgendamento.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CadastraAgendamento.Designer.cs">
+      <DependentUpon>CadastraAgendamento.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Agendamentos.resx">
@@ -185,6 +191,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AreaComum.resx">
       <DependentUpon>AreaComum.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CadastraAgendamento.resx">
+      <DependentUpon>CadastraAgendamento.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CadastroCliente.resx">
       <DependentUpon>CadastroCliente.cs</DependentUpon>
