--- a/ERP com relatorio.csproj
+++ b/ERP com relatorio.csproj
@@ -148,6 +148,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AreaAdm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AreaAdm.Designer.cs">
+      <DependentUpon>AreaAdm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Avaliacao.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -159,6 +165,12 @@
     </Compile>
     <Compile Include="CadastraGato.Designer.cs">
       <DependentUpon>CadastraGato.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CadastraUsuario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CadastraUsuario.Designer.cs">
+      <DependentUpon>CadastraUsuario.cs</DependentUpon>
     </Compile>
     <Compile Include="CadastroEstoque.cs">
       <SubType>Form</SubType>
@@ -222,6 +234,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Usuarios.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Usuarios.Designer.cs">
+      <DependentUpon>Usuarios.cs</DependentUpon>
+    </Compile>
     <Compile Include="Venda.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -230,6 +248,9 @@
     </Compile>
     <EmbeddedResource Include="Agendamentos.resx">
       <DependentUpon>Agendamentos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AreaAdm.resx">
+      <DependentUpon>AreaAdm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="AreaComum.resx">
       <DependentUpon>AreaComum.cs</DependentUpon>
@@ -273,6 +294,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Usuarios.resx">
+      <DependentUpon>Usuarios.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Venda.resx">
       <DependentUpon>Venda.cs</DependentUpon>
     </EmbeddedResource>
