--- a/ERP com relatorio.csproj
+++ b/ERP com relatorio.csproj
@@ -264,6 +264,9 @@
     <EmbeddedResource Include="CadastraGato.resx">
       <DependentUpon>CadastraGato.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="CadastraUsuario.resx">
+      <DependentUpon>CadastraUsuario.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CadastroCliente.resx">
       <DependentUpon>CadastroCliente.cs</DependentUpon>
     </EmbeddedResource>
